[package]
name = "dissimilar"
version = "2.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Zack Hixon <zphixon@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Diff library with semantic cleanup, based on Google's diff-match-patch"
repository = "https://github.com/dtolnay/dissimilar"
documentation = "https://docs.rs/dissimilar"
keywords = ["diff"]
categories = ["algorithms", "text-processing"]
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
unicode-segmentation = "1.7.1"
serde = { version = "1.0.124", optional = true }

[features]
default = ["extended-graphemes"]
extended-graphemes = []
use-serde = ["serde"]
