[package]
name = "dissimilar"
version = "2.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Zack Hixon <zphixon@gmail.com>"]
description = "Diff library with semantic cleanup, based on Google's diff-match-patch"
documentation = "https://docs.rs/dissimilar"
edition = "2018"
keywords = ["diff"]
license = "Apache-2.0" # See the readme. The whole crate is Apache licensed. Some parts are additionally MIT licensed.
repository = "https://github.com/dtolnay/dissimilar"
rust-version = "1.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
unicode-segmentation = "1.7.1"
serde = { version = "1.0.124", optional = true }

[features]
default = ["extended-graphemes"]
extended-graphemes = []
use-serde = ["serde"]
